add new changes

--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -51,7 +51,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
+              <a href="../HTML/author.html" class="nav-link text-white">The Authors</a>
             </li>
           </ul>
         </div>
@@ -262,37 +262,32 @@
         These are some lovely places I will like to visit before I graduate African Leadership College and leave
         Mauritius.
       </p>
-      <div class="imagePlaces">
-        <div class="img-fluid2">
-          <image src="../IMAGES/Charamel.jpg" alt="Coloured earth" class="img-fluid mt-5"
-            style="width: 100%; height: 20rem;">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="../IMAGES/Charamel.jpg" alt="Coloured earth" class="img-fluid mt-5" style="width: 100%; height: 20rem;">
             <h6 class="note"><em><br>Chamarel Seven Colored Earth Geopark</em></h6>
-          </image>
         </div>
-        <div class="img-fluid2">
-          <image src="../IMAGES/National__Park.jpg" alt="National Park" class="img-fluid mt-5"
-            style="width: 100%; height: 20rem;">
+        <div class="col-md-6">
+          <img src="../IMAGES/National__Park.jpg" alt="National Park" class="img-fluid mt-5" style="width: 100%; height: 20rem;">
             <h6 class="note"><em><br>Black River Gorges National Park</em></h6>
-          </image>
         </div>
       </div>
-      <div class="imagePlaces">
-        <div class="img-fluid2">
-          <image src="../IMAGES/Flic.jpg" alt="Flic en Flac" class="img-fluid mt-4" style="width: 100%; height: 20rem;">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="../IMAGES/Flic.jpg" alt="Flic en Flac" class="img-fluid mt-4" style="width: 100%; height: 20rem;">
             <h6 class="note"><em><br>Flic En Flac Beach</em></h6>
-          </image>
         </div>
-        <div class="img-fluid2">
-          <image src="../IMAGES/Nature.jpg" alt="Nature Park" class="img-fluid mt-4"
+        <div class="col-md-6">
+          <img src="../IMAGES/Nature.jpg" alt="Nature Park" class="img-fluid mt-4"
             style="width: 100%; height: 20rem;">
             <h6 class="note"><em><br>Casela Nature Parks</em></h6>
-          </image>
         </div>
       </div>
     </article>
+
     <article class="testimonial grid-col-3">
       <span class="card-number fw-bold">07</span>
-      <h5 class="card-title  ">Ideas For the Future & Careers</h5>
+      <h5 class="card-title  ">Ideas For the Future </h5>
 
       <p>
         I have always had so many plans and ideas for the future. Growing up in an under developed community in Ashaiman
@@ -312,40 +307,9 @@
         I also decided on creating an organization which will teach and train every young person some handy work skill
         such as knitting of bags, clothes, beads making and other skills that can help reduce the rate of unemployment.
       </p>
-      <h5 class="card-title py-3">Ideas for Future</h5>
+      <h5 class="card-title py-3">Ideas for Career</h5>
       <p>
-        Because of the Covid-19 pandemic, we had to travel to Mauritius
-        in January, 2021 instead of September, 2020. It was quite a
-        fascinating situation because we had to do some few lessons
-        online from September to December, 2020 where learnt about
-        certain things of ALU and how to use learning materials provided
-        by the institution. <br />
-        I had to be in quarantine in a country i had no idea about and
-        it was suffocating especially because of the inability to go out
-        and explore the place. I can sometimes be seen as a boring person because I love to be
-        by myself either watching a movie or doing some basic stuffs. So
-        far I have tried to become more sociable rather than being an
-        Most people tend to think I am an introvert and others too an
-        extrovert. I love spending time alone and doing things that
-        excite me the most. But I have some social life that includes
-        both personal and professional interactions. I see it as an
-        element of learning, joy, self-fulfillment and personal
-        resilience. I love working as a team with my peers groups and
-        friends because I see it as a way of learning from people. I
-        spend time with friends, example friends with the same interest
-        as me. I love to listen to people so I can hear diverse ideas of
-        extrovert. I love spending time alone and doing things that
-        excite me the most. But I have some social life that includes
-        both personal and professional interactions. I see it as an
-        element of learning, joy, self-fulfillment and personal
-        resilience. I love working as a team with my peers groups and
-        friends because I see it as a way of learning from people. I
-        spend time with friends, example friends with the same interest
-        as me. I love to listen to people so I can hear diverse ideas ofm
-        friends because I see it as a way of learning from people. I
-        spend time with friends, example friends with the same interest
-        as me. I love to listen to people so I can hear diverse ideas ofm
-
+        I want to be a software engineer or website developer and also I want to be an international business woman.
       </p>
 
     </article>
