--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -53,7 +53,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
+              <a href="../HTML/author.html" class="nav-link text-white">The Authors</a>
             </li>
           </ul>
         </div>
@@ -198,7 +198,13 @@
               prices.
               I also hope to expand as I continue my academic and entrepreneurship journey.
               </p>
-              <img src="../IMAGES/Copy of hairsaloon logo design - Made with PosterMyWall (3).jpg" alt="hair" class="img-fluid py-3" style="width: 300px; height: 300px; align-items: center; margin-left: 150px; border-radius: 20px;"> 
+              <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                  <img src="../IMAGES/Copy of hairsaloon logo design - Made with PosterMyWall (3).jpg" alt="hair" class="img-fluid py-3" style="width: 300px; height: 300px; align-items: center;"> 
+                </div>
+                <div class="col-md-3"></div>
+              </div>
     </article>
 
     <article class="testimonial">
