--- a/HTML/story3.html
+++ b/HTML/story3.html
@@ -51,7 +51,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
+              <a href="../HTML/author.html" class="nav-link text-white">The Authors</a>
             </li>
           </ul>
         </div>
@@ -205,14 +205,20 @@
 
   </main>
   </div>  
+  
+  
   <section class="section3">
     <footer>
         <div class="jumbotron footer-jumbotron">
             <div class="container-md">
                 <div class="row">
-                    <div class="col-md-12 pt-3">
-                        <h3>MADE WITH LOVE</h3>
+                    <div class="col-md-6">
                         <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                    </div>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-1"></div>
+                    <div class="col-md-2">
+                        <h3 class="mt-3">MADE WITH LOVE</h3>
                     </div>
                 </div>
             </div>
