--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -52,7 +52,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
+                            <a href="../HTML/author.html" class="nav-link text-white">The Authors</a>
                         </li>
                     </ul>
                 </div>
@@ -148,6 +148,7 @@
             </p>
             <img src="../IMAGES/ALU1.jpg" class="img-fluid" style="margin-left: 50%; transform:translateX(-50%); width:300px; height: 300px;"/>
         </article>
+        
         <article class="testimonial">
             <span class="card-number fw-bold">05</span>
             <h5 class="card-title  ">Social Life</h5>
