--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -52,7 +52,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
+                            <a href="../HTML/author.html" class="nav-link text-white">The Authors</a>
                         </li>
                     </ul>
                 </div>
