--- a/HTML/author.html
+++ b/HTML/author.html
@@ -49,7 +49,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="../HTML/author.html" class="nav-link text-white">Authors</a>
+              <a href="../HTML/author.html" class="nav-link text-white">The Authors</a>
             </li>
           </ul>
         </div>
@@ -61,11 +61,9 @@
         <div class="carousel-item active bg-1">
           <div class="carousel-caption">
             <p>
-              <span>Deborah Ama Paintsil </span>, a Ghanaian citizen and the Project Manager for our project.
-              She is interested in website development or software engineering and has a keen interest in database
-              development.
-              She ensured that the project was ongoing and every team member did his or her assigned task. She also
-              helped in assigning of tasks.
+              <span>I'm Deborah </span>, a Ghanaian citizen and the Project Manager for our project.
+              Interested in website development or software engineering and has a keen interest in database development.
+              Ensured that the project was ongoing and every team member did his or her assigned task. I also helped in assigning of tasks.
               Contributed in building and desiging of the website.
             </p>
             <a class="text-white btn" href="../HTML/story1.html" style="background-color: #E23219;">Her Story</a>
@@ -74,49 +72,42 @@
         <div class="carousel-item bg-2">
           <div class="carousel-caption">
             <p>
-              <span>Josephine Ekhator Nation</span>, a Nigerian citizen and a team member of our project.
-              She is interested in website development or software engineering and has a keen interest in database
-              development.
-              She helped with the smooth running of our project, constantly checking in to ensure that the project was
-              in the right direction. Built her page and assisting when needed to fix bugs.
+              <span>I'm Josephine</span>, a Nigerian citizen and a team member of our project.
+              Interested in cybersecurity.
+              Helped with the smooth running of our project, constantly checking in to ensure that the project was in the right direction. Assisted when needed to fix bugs.
             </p>
-            <a class="text-white btn" href="#" style="background-color: #E23219;">Her Story</a>
+            <a class="text-white btn" href="../HTML/story2.html" style="background-color: #E23219;">Her Story</a>
           </div>
         </div>
         <div class="carousel-item bg-3">
           <div class="carousel-caption">
             <p>
-              <span>Justus Wamswa Chemirmir</span>, a Kenyan citizen and a team member for our project.
-              He is interested in website development or software engineering and has a keen interest in database
-              development.
-              He helped in the designing and building of our home page, assisted in fixing bugs. Built his own page and
-              helped in building the website.
+              <span>I'm Justus</span>,a Kenyan citizen and a team member for our project.
+              Interested in programming, network technology and cyber security.
+             Helped in the designing and building of our home page, assisted in fixing bugs. Built my own page and helped in building the website.
             </p>
-            <a class="text-white btn" href="#" style="background-color: #E23219;">His Story</a>
+            <a class="text-white btn" href="../HTML/story3.html" style="background-color: #E23219;">His Story</a>
           </div>
         </div>
         <div class="carousel-item bg-4">
           <div class="carousel-caption">
             <p>
-              <span>Mangaliso Dlamini</span>, a Kenyan citizen and a team member for our project.
-              He is interested in website development or software engineering and has a keen interest in database
-              development.
-              He helped in the designing of the wireframe for the website. Gave feedbacks when necessary to beautify the
-              website.
+              <span>I'm Mangaliso</span>, an Eswantini citizen and a team member for our project.
+              Interested in cybersecurity.
+              Helped in the designing of the wireframe for the website. Gave feedbacks when necessary to beautify the website.
             </p>
-            <a class="text-white btn" href="#" style="background-color: #E23219;">His Story</a>
+            <a class="text-white btn" href="../HTML/story4.html" style="background-color: #E23219;">His Story</a>
           </div>
         </div>
         <div class="carousel-item bg-5">
           <div class="carousel-caption">
             <p>
-              <span>Kevin Langat</span>, a Kenyan citizen and a team member for our project.
-              He is interested in website development or software engineering and has a keen interest in database
-              development.
-              He helped in the building of our home page, built his webpage and was available for meetings throughout
-              the project.
+              <span>I'm Kevin</span>, a Kenyan citizen and a team member for our project.
+              Interested in Data Analysis.
+              Helped in the building of our home page, built my webpage and was available for meetings throughout the project.
+              I also helped in creating the comment system of this website.
             </p>
-            <a class="text-white btn" href="#" style="background-color: #E23219;">His Story</a>
+            <a class="text-white btn" href="../HTML/story5.html" style="background-color: #E23219;">His Story</a>
           </div>
         </div>
       </div>
@@ -144,6 +135,25 @@
       </div>
     </div>
   </header>
+
+  <section class="section3">
+    <footer>
+        <div class="jumbotron footer-jumbotron">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                    </div>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-1"></div>
+                    <div class="col-md-2">
+                        <h3 class="mt-3">MADE WITH LOVE</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
