add new changes

--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -242,7 +242,7 @@
         <br> <br>
         Additionally, I will expand my hair salon business to a full beauty company where everything of beauty can be gotten from. 
       </p>
-      <img src="../IMAGES/ideas.jpg" alt="ideas" class="img-fluid ideas">
+      <img src="../IMAGES/ideas.jpg" alt="ideas" class="img-fluid ideas py-5">
     </article>
   </main>
   </div>
