add new changes

--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -94,16 +94,15 @@
         Bsc Mathematical Sciences in the University of Ghana, Legon and stopped in my 2nd year to continue schooling in
         Mauritius.
       </p>
-
-      <div class="imagePlaces">
-        <div class="img-fluid1">
-          <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid" style="height: 200px;">
         </div>
-        <div class="img-fluid1">
-          <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid">
+        <div class="col-md-6">
+          <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid" style="height: 200px;">
         </div>
       </div>
-<br>
+      <br>
       <h6 class="note"><em>Some pictures of Jordan Village</em></h6>
 
     </article>
