--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -65,15 +65,12 @@
         <article class="testimonial grid-col-2">
             <span class="card-number fw-bold">01</span>
             <h5 class="card-title">About Me</h5>
-            <img src="../IMAGES/IMG_KEV11.jpg" class="img-fluid" style="float: left; width: 40%; margin-right: 1rem;" />
-
-            <p>
+            <img src="../IMAGES/IMG_KEV11.jpg" class="img-fluid" style="float: left; width: 50%; margin-right: 1rem; height: 300px;" />
+            <br>
+            <br>
+            <p class="py-5">
                 My name is Langat Kevin, 20, and a second-year student studying computing at African Leadership College,
-                Mauritius. My home town is Bomet, in Bomet County in Kenya, where I have grown for the better part of my
-                life. <br>I studied at a primary school called Kimulot Primary School before I moved to LENANA SCHOOL in
-                Nairobi, Kenya. I later joined Strathmore Univesity in Nairobi, Kenya, for a four-month Young
-                Entrepreneurs Training Program offered by Strathmore Business School and sponsored by The Allan and Gill
-                Philanthropy Africa.
+                Mauritius.
             </p>
         </article>
         <article class="testimonial">
@@ -81,9 +78,11 @@
             <h5 class="card-title  ">Background</h5>
 
             <p>
-                I come from a community called Mcengeni in the Hhohho district of Eswatini. A community that stands on a
-                mountainous area which makes a for a great scenery especially.
-                Like most rural communities in the kingdom, it is survived by subsistence farming.
+                My home town is Bomet, in Bomet County in Kenya, where I have grown for the better part of my
+                life. <br>I studied at a primary school called Kimulot Primary School before I moved to LENANA SCHOOL in
+                Nairobi, Kenya. I later joined Strathmore Univesity in Nairobi, Kenya, for a four-month Young
+                Entrepreneurs Training Program offered by Strathmore Business School and sponsored by The Allan and Gill
+                Philanthropy Africa.
             </p>
 
         </article>
