--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -73,7 +73,9 @@
         I am dynamic and creative person who loves nature and passionate
         about things that makes me grow.
       </p>
+      <a class="text-white btn mt-3" href="https://docs.google.com/document/d/1V1iTIDKAtCZmiTTKFVnpvYSwnKH1BiTalA9x4wmp_fw/edit" style="background-color: #E23219;">Resume</a>
     </article>
+    
     <article class="testimonial grid-col-2">
       <span class="card-number fw-bold">02</span>
       <h5 class="card-title  ">Background</h5>
