--- a/HTML/index.html
+++ b/HTML/index.html
@@ -49,7 +49,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="../HTML/authors.html">The Authors</a>
+                        <a class="nav-link" href="../HTML/author.html">The Authors</a>
                       </li>
                     </ul>
                   </div>
@@ -149,7 +149,7 @@
                             <div class="col-md-3"></div>
                             <div class="col-md-1"></div>
                             <div class="col-md-2">
-                                <h3 class="mt-3">MADE WITH LOVE</h3>
+                                <h3 class="mt-3">MADE WITH ❤️</h3>
                             </div>
                         </div>
                     </div>
