--- a/HTML/story3.html
+++ b/HTML/story3.html
@@ -218,7 +218,7 @@
                     <div class="col-md-3"></div>
                     <div class="col-md-1"></div>
                     <div class="col-md-2">
-                        <h3 class="mt-3">MADE WITH ❤️</h3>
+                        <h3 class="mt-3">MADE WITH ❣️</h3>
                     </div>
                 </div>
             </div>
