add new changes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -90,7 +90,7 @@
                             True or not!!
                             We realized that we can become a pillar that will define our world some day!!</p>
                             <p class="mt-4">
-                                <a href="../HTML/authors.html" class="btn btn-outline-warning stories-button">The Authors</a>
+                                <a href="../HTML/author.html" class="btn btn-outline-warning stories-button">The Authors</a>
                             </p>
                          </div>
                         </div>
