--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="../HTML/index.html" style="color: white;">Home</a>
+              <a class="nav-link active text-white" aria-current="page" href="../index.html" style="color: white;">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
