--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="stylesheet" href="./CSS/index.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -33,23 +33,23 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
+                                <a class="dropdown-item" href="./HTML/author.html">Deborah Ama Paintsil</a>
                               </li>
                               <li>
-                                <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
+                                <a class="dropdown-item" href="./HTML/story2.html">Josephine Nation Ekhator</a>
                               </li>
                               <li>
-                                <a class="dropdown-item" href="../HTML/story3.html"
+                                <a class="dropdown-item" href="./HTML/story3.html"
                                   >Justus Wamswa Chemirmir</a>
                               </li>
                               <li>
-                                <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
+                                <a class="dropdown-item" href="./HTML/story4.html">Mangaliso Dlamini</a>
                               </li>
-                              <li><a class="dropdown-item" href="../HTML/story5.html">Kevin Langat</a></li>
+                              <li><a class="dropdown-item" href="./HTML/story5.html">Kevin Langat</a></li>
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="../HTML/author.html">The Authors</a>
+                        <a class="nav-link" href="./HTML/author.html">The Authors</a>
                       </li>
                     </ul>
                   </div>
