--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-md">
-        <a class="navbar-brand" href="../HTML/index.html">
+        <a class="navbar-brand" href="../index.html">
           <h2 class="logo text-white">IP-G2</h2>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
