--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-md">
-        <a class="navbar-brand" href="../HTML/index.html">
+        <a class="navbar-brand" href="../index.html">
           <h2 class="logo text-white">IP-G2</h2>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -242,7 +242,13 @@
         <br> <br>
         Additionally, I will expand my hair salon business to a full beauty company where everything of beauty can be gotten from. 
       </p>
-      <img src="../IMAGES/ideas.jpg" alt="ideas" class="img-fluid ideas py-5">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <img src="../IMAGES/ideas.jpg" alt="ideas" class="img-fluid ideas py-5">
+        </div>
+        <div class="col-md-2"></div>
+      </div>
     </article>
   </main>
   </div>
