add new changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="./HTML/author.html">Deborah Ama Paintsil</a>
+                                <a class="dropdown-item" href="./HTML/story1.html">Deborah Ama Paintsil</a>
                               </li>
                               <li>
                                 <a class="dropdown-item" href="./HTML/story2.html">Josephine Nation Ekhator</a>
@@ -80,8 +80,8 @@
 
                     <div class="row image-row align-items-center justify-content-center">
                         <div class="col-md-6" style="position: relative;">
-                            <img src="../IMAGES/ALU1.jpg" alt="ALU" class="img-fluid picture-ALU">
-                            <img src="../IMAGES/ALU2.jpg" class="ALU images-ALU">
+                            <img src="./IMAGES/ALU1.jpg" alt="ALU" class="img-fluid picture-ALU">
+                            <img src="./IMAGES/ALU2.jpg" class="ALU images-ALU">
                         </div>
                         <div class="col-md-6">
                          <div class="ps-5">
@@ -90,7 +90,7 @@
                             True or not!!
                             We realized that we can become a pillar that will define our world some day!!</p>
                             <p class="mt-4">
-                                <a href="../HTML/author.html" class="btn btn-outline-warning stories-button">The Authors</a>
+                                <a href="./HTML/author.html" class="btn btn-outline-warning stories-button">The Authors</a>
                             </p>
                          </div>
                         </div>
@@ -109,27 +109,27 @@
                 <div class="slide">
 
                     <div class="hexagon hex1">
-                        <a href="../HTML/story1.html">
+                        <a href="./HTML/story1.html">
                         <h2 class="desc">Hi, I am Deborah </h2>
                         </a>
                     </div>
                     <div class="hexagon hex2">
-                        <a href="../HTML/story2.html">
+                        <a href="./HTML/story2.html">
                             <h2 class="desc">Hi, I am Josephine</h2>
                         </a>
                     </div>
                     <div class="hexagon hex3">
-                        <a href="../HTML/story5.html">
+                        <a href="./HTML/story5.html">
                             <h2 class="desc">Hi, I am Kevin</h2>
                         </a>
                     </div>
                     <div class="hexagon hex4">
-                        <a href="../HTML/story3.html">
+                        <a href="./HTML/story3.html">
                             <h2 class="desc">Hi, I am Justus</h2>
                         </a>
                     </div>
                     <div class="hexagon hex5">
-                        <a href="../HTML/story4.html">
+                        <a href="./HTML/story4.html">
                             <h2 class="desc">Hi, I am Mangaliso</h2>
                         </a>
                     </div>
