--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -74,15 +74,18 @@
       <h6 class="card-subtitle">About Me</h6>
       <p>
         My name is Mangaliso Linda Dlamini (FYI, that's not the Spanish Linda. From my native language, it means to be patient). <br> 
-        <br/>I am  a Computing student at the African Leadership College in Mauritius. I am a humble, noble lad and probably will be quietest guy in the room. <br>
-        <br/>I love sports except for American sports, I am still struggling to understand most of them. Though I have never played for official teams, 
-        I have had the chance to try football and cricket in my backyard and in the streets. I actually played volleyball in high school and won a few medals.
+        <br/>I am  a Computing student at the African Leadership College in Mauritius. I am a humble, noble lad and probably will be quietest guy in the room.
       </p>
       <h6 class="card-subtitle">About Home</h6>
       <p>
         I come from a community called Mcengeni in the Hhohho district of Eswatini. A humble community that stands on a mountainous area which makes for a great scenery. Like most rural communities in the kingdom, it is survived by subsistence farming. <br/>
         Eswatini (formerly Swaziland) is Africa's last absolute monarchy, albeit, there is an ongoing political unrest that is posing a challenge to monarchical rule. Otherwise, the country is known for its strong cultural values and mountainous landscapes. It has some fascinating artefacts including the second largest rock in the world, Sibebe Rock and is home to the wildlife big five (lion, leopard, elephant, buffalo, and rhino). <br/>
       </p>
+      <img src="../IMAGES/Manga/Manga_home1.jpg" alt="Cattle and mountainous landscape" class="img-fluid mt-2 images">
+            <p class="note"><em>Main livestock for subsistence farmers</em></p>
+      <img src="../IMAGES/Manga/Mlilwane.jpg" alt="Wildlife at Mlilwane Wildlife Reserve" class="img-fluid mt-2 images">
+            <p class="note"><em>Wildlife at Mlilwane Wildlife Reserve</em></p>
+
       <h6 class="card-subtitle">Before ALU</h6>
       <p>
         Having overachieved in my local primary schools, Elubhaceni Primary School, my parents so it fit to send me to one of the top high schools in 
@@ -128,9 +131,12 @@ ALU classes were different than what I had experienced before. They were longer 
       <p>
         In ALU, we do hard things, but there is also time reserved for having fun. From time to time, we find time for kicking about in our 
         mini football pitch. It’s always a fun way to break a sweat. There’s also clubs and society within campus that allow us to 
-        appreciate the diversity in the ALU community.
-
+        appreciate the diversity in the ALU community.<br/><br/>
+        With fellow students from the Southern African region, we try to replicate the feeling of home. We 
+        organise get together occassions just like the ones we had with our families back home.
       </p>
+      <img src="../IMAGES/Manga/Manga_social.jpg" alt="Meat on a grill" class="img-fluid mt-2 images">
+            <p class="note"><em>Cooking with fire, the Southern African way</em></p>
       
     </article>
     <article class="testimonial grid-col-2">
@@ -149,20 +155,12 @@ ALU classes were different than what I had experienced before. They were longer 
     </article>
     <article class="testimonial">
       <span class="card-number fw-bold">06</span>
-      <h5 class="card-title  ">Future and Careers</h5>
+      <h5 class="card-title  ">A Little more about me</h5>
       <div>
-        <a href="#"
-                  ><i class="fa fa-facebook-official" aria-hidden="true"></i
-                ></a>
-                <a href="#"
-                  ><i class="fa fa-whatsapp" aria-hidden="true"></i
-                ></a>
-                <a href="#"
-                  ><i class="fa fa-telegram" aria-hidden="true"></i
-                ></a>
-                <a href="#"
-                  ><i class="fa fa-linkedin-square" aria-hidden="true"></i
-                ></a>
+        <p>
+          I love sports except for American sports, I am still struggling to understand most of them. Though I have never played for official teams, 
+        I have had the chance to try football and cricket in my backyard and in the streets. I actually played volleyball in high school and won a few medals.
+        </p>
       </div>
     </article>
     
@@ -171,7 +169,7 @@ ALU classes were different than what I had experienced before. They were longer 
   
   <!-- begin wwww.htmlcommentbox.com -->
   <div class="jumbotron comment-jumbotron">
-    <div class="container-md">
+    <div class="container-md" id="comments">
     <div id="HCB_comment_box">
       <a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...
     </div>
