add new changes

--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -164,8 +164,12 @@
             <h5 class="card-title  ">Life In Mauritius</h5>
 
             <p>
-                Mauritius is a beautiful island country that is famous for its natural riches and great culture. However, I do not admire the taste and smell of their food because I am already used to typical Nigerian dishes so it was very difficult to cope. 
-                Because of the struggle I had with eating and studies, I reached out to the student life and wellness team. It was them that gave me the strategies to manage my academics and prepare my own meal with the available foodstuff in the country. <br>
+                I arrived in Mauritius in the middle of a coronavirus pandemic. The Island had one of the strictest quarantine regulations. Soon after completing the quarantine period, a lockdown was imposed for
+                 three months which limited my experiences of the Island. Nevertheless, I have been to some beautiful place such as Pont Natural and Le Bouchon beach. 
+                I have also enjoyed a few sunsets over the Indian ocean at the beach. <br>
+                <br>
+                Well Mauritius is hot, and rainfall may come at any given time without much warning. Such makes it difficult to enjoy the weather. I also had trouble with the food and the fact that Mauritians 
+                lean more towards French than English. Otherwise I have enjoy being in Mauritius
             </p>
         </article>
         <article class="testimonial">
