add new changes

--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -64,11 +64,15 @@
     <article class="testimonial">
       <span class="card-number fw-bold">01</span>
       <h5 class="card-title">About Me</h5>
-      <img src="../IMAGES/Deb3.jpg" class="img-fluid" />
-
+      <div style="display: flex; align-items: center; margin-bottom: 2rem;">
+        <div
+          style="width: 10rem; height: 10rem; padding: 1rem; border-radius: 50%; background-image: url(../IMAGES/Deb3.jpg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+        </div>
+        <br>
+        <span class="hello">Hello, <br></span>
+      </div>
       <p>
-        <br><br>
-        Hi, I am Deborah Ama Paintsil, a computing student of the
+       I am Deborah Ama Paintsil, a computing student of the
         African Leadership University, Mauritius <br />
         I am dynamic and creative person who loves nature and passionate
         about things that makes me grow.
