--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -66,9 +66,14 @@
     <article class="testimonial">
       <span class="card-number fw-bold">01</span>
       <h5 class="card-title">About Me</h5>
-      <img src="../IMAGES/JOSSY.jpeg" class="img-fluid" />
+      <div style="display: flex; align-items: center; margin-bottom: 2rem;">
+        <div
+          style="width: 10rem; height: 10rem; padding: 1rem; border-radius: 50%; background-image: url(../IMAGES/JOSSY.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+        </div>
+        <br>
+        <span class="hello">Hello, <br></span>
+      </div>
       <p>
-        <br><br>
         My name is Josephine Nation Ekhator. I am a student of African Leadership University, Mauritius and I major in
         computing. <br>
         I am a determined person who is passionate about mentoring, tutoring, and lecturing students across the
