--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -65,9 +65,13 @@
         <article class="testimonial grid-col-2">
             <span class="card-number fw-bold">01</span>
             <h5 class="card-title">About Me</h5>
-            <img src="../IMAGES/IMG_KEV11.jpg" class="img-fluid" style="float: left; width: 50%; margin-right: 1rem; height: 300px;" />
-            <br>
-            <br>
+            <div style="display: flex; align-items: center; margin-bottom: 2rem;">
+                <div
+                  style="width: 10rem; height: 10rem; padding: 1rem; border-radius: 50%; background-image: url(../IMAGES/IMG_KEV11.jpg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                </div>
+                <br>
+                <span class="hello">Hello, <br></span>
+              </div>
             <p class="py-5">
                 My name is Langat Kevin, 20, and a second-year student studying computing at African Leadership College,
                 Mauritius.
