--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-md">
         <a class="navbar-brand" href="../index.html">
-          <h2 class="logo">IP-G2</h2>
+          <h2 class="logo text-white">IP-G2</h2>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
