--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -83,10 +83,7 @@
 
             <p>
                 My home town is Bomet, in Bomet County in Kenya, where I have grown for the better part of my
-                life. <br>I studied at a primary school called Kimulot Primary School before I moved to LENANA SCHOOL in
-                Nairobi, Kenya. I later joined Strathmore Univesity in Nairobi, Kenya, for a four-month Young
-                Entrepreneurs Training Program offered by Strathmore Business School and sponsored by The Allan and Gill
-                Philanthropy Africa.
+                life. <br> It is onw of the greenest counties in Kenya and is known mainly because of green tea estates.  
             </p>
 
         </article>
@@ -113,13 +110,10 @@
             <!-- <img src="../IMAGES/ALU.png" class="ALU-logo" /> -->
             <!-- <img src="../IMAGES/ALU1.jpg" class="img-fluid" /> -->
             <p class="mt-2">
-                Having overachieved in rural primary schools, my parents so it fit to send me to one of the top high
-                schools in the country. As such I was privileged to attend Manzini Nazarene High School.
-                <br>
-                Five years later I graduated and went on to enroll at the University of Eswatini, Kwaluseni Campus.
-                <br>
-                <br>
-                By the time I left to join ALU, I had completed 2 years for a degree in Information Technology.
+                I studied at a primary school called Kimulot Primary School before I moved to LENANA SCHOOL in
+                Nairobi, Kenya. I later joined Strathmore Univesity in Nairobi, Kenya, for a four-month Young
+                Entrepreneurs Training Program offered by Strathmore Business School and sponsored by The Allan and Gill
+                Philanthropy Africa.
             </p>
             <h5 class="card-title py-3">ALU Journey</h5>
             <p>
@@ -166,7 +160,7 @@
             <h5 class="card-title  ">Life In Mauritius</h5>
 
             <p>
-                I have had a fantastic experience in Mauritius - Afroca's most beautiful island. The experience has been
+                I have had a fantastic experience in Mauritius - Africa's most beautiful island. The experience has been
                 wow! I travelled a lot during my first year and even got an award for travelling. <br>Travelling comes
                 with other adventures, and one thing that I have come to love is photography. Starting from point zero
                 to becoming an ALU marketing intern is one of the most significant steps I took in my first year. <br>I
