--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -97,6 +97,7 @@
         <article class="testimonial grid-col-2">
           <span class="card-number fw-bold">02</span>
           <h5 class="card-title  ">ALU Journey</h5>
+          <img src="../IMAGES/Manga/ALU.jpg" class="float-start" style="max-width: 50%; margin-right: 1rem;"/>
           <h6 class="card-subtitle">To ALU</h6>
           <p>
             I wanted to learn more about ALA, ALU’s sister institution which had visited my high school a few years ago. However, being at a tertiary institution, ALA offerings seemed a step back. So, I randomly searched African Leadership University on Google, which lead me to the ALU website. I read their mission and vision, and few articles which had more insight in what their goals are. All of it appealed to me. Then I hit the apply button. <br/>
@@ -143,6 +144,7 @@
           <span class="card-number fw-bold">05</span>
           <h5 class="card-title  ">Ideas for the Future</h5>
     
+          <img src="../IMAGES/ideas.jpg" class="float-start" style="max-width: 50%; margin-right: 1rem;"/>
           <p>
             The idea is to either go for a masters in Cyber security or to work towards earning professional ethical hacking certificates. 
             The aim is to use the knowledge and experience to create and strength cybersecurity frameworks and policies in my country.<br/><br/>
