--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -94,7 +94,7 @@
               This is because growing up as the first child in a family of six children was a bit tough in terms of
               acquiring education, especially as a girl child. <br>
               Hence, these challenges led to the passion for building a better and healthier Africa. <br>
-              Despite being Africa's largest economy, gender equality in education has been a major in some parts,
+              Despite being Africa's largest economy, gender equality in education has been a major challenge in some parts,
               especially the rural area.
               Hence, education opportunities are mostly limited for girls. However, this barrier did not stop me from
               getting the basic education I needed to get to the top.
@@ -118,7 +118,7 @@
         several ethnic groups. Within these ethnic groups are several tribes of a total of 371. Thus, I am from
         Edo state, one of the most beautiful states in Nigeria. As the center and cradle of culture in Nigeria,
         Edo state is the custodian of significant historical artifacts made of bronze, brass, timber, and
-        terracotta. Additionally, the Edo state also known as the Edo Kingdom of Benin is one of the most
+        terracotta. Additionally, Edo state also known as the Edo Kingdom of Benin is one of the most
         well-known precolonial kingdoms on the Guinea Coast of West Africa.
         Hence, I speak Edo and English languages because English is the official language of Nigeria and I am an
         Edo by the tribe. <br>
@@ -167,7 +167,7 @@
               The application process was not complex as the instructions were easy to understand and navigate.
               A few weeks after submission, I was admitted into the university and before I could complete the
               celebration,
-              a congratulation scholarship email was sent. It was indeed a breath of fresh.
+              a congratulation scholarship email was sent. It was indeed a breath of fresh air.
             </p>
             <h5 class="card-title py-3">Life At ALU</h5>
             <p>
