--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -94,7 +94,7 @@
               This is because growing up as the first child in a family of six children was a bit tough in terms of
               acquiring education, especially as a girl child. <br>
               Hence, these challenges led to the passion for building a better and healthier Africa. <br>
-              Despite being Africa's largest economy, gender equality in education has been a major challenge in some parts,
+              Despite being Africa's largest economy, gender equality in education has been a major challenge in some parts of the country,
               especially the rural area.
               Hence, education opportunities are mostly limited for girls. However, this barrier did not stop me from
               getting the basic education I needed to get to the top.
